--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
   "homepage": "https://github.com/altenia/ecolearnia",
   "dependencies": {
     "bunyan": "^1.3.3",
+    "handlebars": "^3.0.0",
     "hapi": "^8.2.0",
+    "hoek": "^2.11.0",
+    "joi": "^5.1.0",
     "lodash": "^3.2.0",
+    "lout": "^6.1.0",
+    "mongoose": "^3.8.23",
     "nconf": "^0.7.1",
+    "node-uuid": "^1.4.2",
     "promise": "^6.1.0"
   },
   "devDependencies": {
