--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/altenia/ecolearnia",
   "dependencies": {
     "bunyan": "^1.3.3",
+    "fast-json-patch": "^0.5.1",
     "handlebars": "^3.0.0",
     "hapi": "^8.2.0",
     "hoek": "^2.11.0",
